--- a/einagalli/index.html
+++ b/einagalli/index.html
@@ -58,11 +58,11 @@
         <input type="submit" value="OK">
     </form> -->
 
-    <!--  <form method="post">
-        <label for="numbers">Digite 20 números separados por vírgula:</label><br>       
-        <input type="text" id="numbers" name="numbers"><br><br>        
-        <button type="submit">Calcular</button>    
-    </form> -->
+    <form action="main.php" method="post">
+        <label for="numbers">Digite 20 numeros separados por virgula:</label><br>
+        <input type="text" id="numbers" name="numbers"><br><br>
+        <input type="submit" value="OK">
+    </form>
 
     <!-- <form action="main.php" method="post">
         Digite um valor: <input type="text" name="num1"><br>
